--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
             <h3>Ruby Offeibea Adu</h3>
             <p class="role">Founder / President</p>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/ing-ruby-offeibea-adu-86756754?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/ing-ruby-offeibea-adu-86756754?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn" rel="noopener noreferrer"
                rel=" " ><i class="fab fa-linkedin"></i
               ></a>
               <!-- <a href="#" class="social-icon" aria-label="Twitter"
@@ -248,7 +248,7 @@
             <h3>Benedicta Safo</h3>
             <p class="role">Vice President</p>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/benedicta-safo-225291108?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/benedicta-safo-225291108?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn" rel="noopener noreferrer"
                 ><i class="fab fa-linkedin"></i
               ></a>
               <!-- <a href="#" class="social-icon" aria-label="Twitter"
@@ -270,7 +270,7 @@
             <h3>Joana Attafuah</h3>
             <p class="role">Secretary</p>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/joana-attafuah-b67686103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/joana-attafuah-b67686103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn" rel="noopener noreferrer"
                 ><i class="fab fa-linkedin"></i
               ></a>
               <!-- <a href="#" class="social-icon" aria-label="Twitter"
@@ -529,7 +529,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="noopener noreferrer">
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
