--- a/portfolio.html
+++ b/portfolio.html
@@ -301,7 +301,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="noopener noreferrer">
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
