add text to Projects

--- a/Projects.html
+++ b/Projects.html
@@ -291,7 +291,7 @@
                     <div class="article">
                       <div class="article-img">
                         <a href="Projects/Pokrom.html">
-                          <img src="images/image64.webp" alt="">
+                          <img src="images/p3.jpg" alt="">
                         </a>
                       </div>
                       <div class="article-content">
