--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -179,24 +179,29 @@
                   <li><i class="fa fa-map-marker" aria-hidden="true"></i> Akaa</li>
                 </ul>
                 <p style="text-align: justify">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Asiafo Amanfro M/A School, situated in a growing peri-urban community, faces challenges such as its distance from residential areas, 
+                  limited educational resources, and inadequate infrastructure. As the area continues to develop, 
+                  the school must adapt to the evolving needs of students while depending on government support. 
+                  Recognizing these challenges, Le Shelter Foundation initiated an intervention to enhance learning conditions, 
+                  promote student development, and improve the overall educational experience.
                 </p>
                 <p style="text-align: justify">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Le Shelter Foundation’s visit to Asiafo Amanfro M/A School featured a series of impactful interventions aimed 
+                  at enhancing education and school facilities. Through interactive workshops-including science experiments, 
+                  creative arts, and soap-making-students were encouraged to develop creativity, teamwork, and critical thinking. 
+                  Educational discussions on hygiene and academic success provided essential life skills, 
+                  while motivational talks by industry professionals inspired students to broaden their career aspirations. 
+                  Additionally, minor infrastructure repairs, such as toilet refurbishments, improved the school's facilities. 
+                  To ensure long-term benefits, Le Shelter Foundation donated educational kits, 
+                  provided a fuel-powered grass-cutting machine for school maintenance, and introduced a structured mentorship program to support students 
+                  in their academic and personal growth.
+                </p>
+                <p style="text-align: justify">
+                  Le Shelter Foundation’s intervention at Asiafo Amanfro M/A School led to significant improvements in both academic and infrastructural aspects. 
+                  Increased access to educational materials enhanced student learning, while infrastructure upgrades and improved hygiene facilities created a more 
+                  conducive school environment. Motivational sessions and mentorship programs empowered students with confidence and ambition, 
+                  encouraging them to set and achieve their goals. This initiative reaffirmed the foundation’s commitment to supporting underserved communities, 
+                  equipping students with the resources and guidance needed to succeed academically and beyond.
                 </p>
               </div>
 
@@ -285,7 +290,7 @@
               <div class="widget-post">
                 <a href="Pokrom.html">
                   <div class="widget-img">
-                    <img src="../images/image11.webp" alt="" />
+                    <img src="../images/p8.JPG" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Pokrom M/A Junior High School</span>
