--- a/Projects/Asutsuare.html
+++ b/Projects/Asutsuare.html
@@ -179,24 +179,32 @@
                   <li><i class="fa fa-map-marker" aria-hidden="true"></i> Asutsuare</li>
                 </ul>
                 <p style="text-align: justify">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Asutsuare Estate D/A School, located in a farming community, 
+                  faces significant educational challenges due to economic constraints and limited resources. 
+                  As a government-supported District Assembly school, it relies on external aid to enhance learning conditions. 
+                  Many students struggle with access to essential academic materials and proper hygiene resources, 
+                  impacting their overall educational experience. Recognizing these challenges, 
+                  Le Shelter Foundation initiated an intervention to improve student well-being and foster a supportive learning environment.
                 </p>
                 <p style="text-align: justify">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Le Shelter Foundation visited Asutsuare Estate D/A School to deliver impactful educational activities, 
+                  including presentations on hygiene, health, environmental awareness, 
+                  and career guidance to equip students with essential life skills. Motivational talks encouraged academic excellence, 
+                  while STEM and career path sessions broadened students’ perspectives on future opportunities. 
+                  Interactive Q&A sessions allowed direct engagement with mentors, addressing student aspirations, 
+                  and awareness campaigns promoted positive behavioral change. As part of the initiative, 
+                  the foundation provided educational aids such as books, school bags, and writing materials, 
+                  along with hygiene kits to support sanitation. Additionally, mentorship opportunities were offered to inspire and 
+                  guide students toward reaching their full potential.
+                </p>
+                <p style="text-align: justify">
+                  Le Shelter Foundation’s intervention at Asutsuare Estate D/A School brought meaningful improvements to both 
+                  the academic and personal development of students. Through engaging presentations, mentorship sessions, and resource donations, 
+                  students gained confidence and exposure to new ideas, motivating them to excel in their studies. 
+                  The provision of educational materials such as books, bags, and writing supplies helped create a more supportive learning environment, 
+                  while hygiene kits encouraged better sanitation practices among students and staff. By addressing both educational challenges and 
+                  well-being concerns, this initiative reinforced the foundation’s commitment to empowering underserved communities, 
+                  fostering long-term positive change, and paving the way for a brighter future for young learners.
                 </p>
               </div>
 
@@ -284,7 +292,7 @@
               <div class="widget-post">
                 <a href="Pokrom.html">
                   <div class="widget-img">
-                    <img src="../images/image11.webp" alt="" />
+                    <img src="../images/p8.JPG" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Pokrom M/A Junior High School</span>
