--- a/Projects/Pokrom.html
+++ b/Projects/Pokrom.html
@@ -170,7 +170,7 @@
           <main id="main" class="col-md-8 ">
             <div class="article causes-details">
               <div class="article-img mt-5">
-                <img src="../images/1.jpg" alt="" />
+                <img src="../images/p5.jpg" alt="" />
               </div>
               <div class="article-content">
                 <h2 class="article-title"><strong>Pokrom M/A Junior High School</strong></h2> 
@@ -179,33 +179,40 @@
                   <li><i class="fa fa-map-marker" aria-hidden="true"></i> Akaa</li>
                 </ul>
                 <p style="text-align: justify">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Education is a powerful tool for social change, 
+                  yet many rural schools in Ghana struggle with inadequate resources, 
+                  limited infrastructure, and a lack of extracurricular opportunities. 
+                  Pokrom M/A Junior High School, located in a predominantly agricultural community, 
+                  faces these challenges daily. Many students come from low-income families, 
+                  making access to quality learning materials and career guidance difficult. 
+                  Recognizing these issues, Le Shelter Foundation initiated a humanitarian project aimed at enhancing educational conditions, 
+                  empowering students, and strengthening community engagement. Our efforts were supported by dedicated stakeholders, 
+                  including school administrators, local leaders, and volunteers committed to improving learning outcomes.
                 </p>
                 <p style="text-align: justify">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Le Shelter Foundation’s visit to Pokrom M/A JHS brought meaningful support through motivational talks, 
+                  career guidance, and interactive STEM awareness sessions, inspiring students to pursue their education with confidence. 
+                  Our engagement included team-building exercises, community discussions, and the distribution of essential educational supplies, 
+                  clothing, and hygiene products. Additionally, mentorship programs empowered selected students, 
+                  while teachers benefited from enhanced resources and methodologies. As a result, students gained improved learning conditions, 
+                  heightened interest in STEM fields, and stronger academic support, reinforcing our commitment to fostering long-term educational development.
+                </p>
+                <p style="text-align: justify">
+                  While the initiative successfully addressed immediate needs, long-term sustainability remains a priority. 
+                  Le Shelter Foundation aims to foster ongoing mentorship programs, advocate for further infrastructure improvements, 
+                  and expand STEM opportunities for rural students. By partnering with local stakeholders, 
+                  we are committed to ensuring a brighter educational future for the students of Pokrom M/A JHS.
+                  This initiative reflects our belief that every child deserves access to quality education, 
+                  regardless of their background. Through collective action, we can continue transforming lives and shaping brighter futures.
                 </p>
               </div>
 
               <!-- Lightbox -->
               <div class="photo-viewer">
-                <img src="../images/image38.webp" alt="Image 1" onclick="openLightbox(0)">
-                <img src="../images/image36.webp" alt="Image 2" onclick="openLightbox(1)">
-                <img src="../images/image20.webp" alt="Image 3" onclick="openLightbox(2)">
-                <img src="../images/image13.webp" alt="Image 4" onclick="openLightbox(3)">
+                <img src="../images/p1.jpg" alt="Image 1" onclick="openLightbox(0)">
+                <img src="../images/p4.jpg" alt="Image 2" onclick="openLightbox(1)">
+                <img src="../images/p7.JPG" alt="Image 3" onclick="openLightbox(2)">
+                <img src="../images/p9.JPG" alt="Image 4" onclick="openLightbox(3)">
                 <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
                 <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> 
               </div>
@@ -219,12 +226,12 @@
 
               <script>
                 const images = [
-                    "../images/image38.webp",
-                    "../images/image36.webp",
-                    "../images/image20.webp",
-                    "../images/image13.webp",
-                    "../images/image26.webp",
-                    "../images/image18.webp"
+                    "../images/p1.jpg",
+                    "../images/p4.jpg",
+                    "../images/p7.JPG",
+                    "../images/p9.JPG",
+                    "../images/p8.jpg",
+                    "../images/p3.jpg"
                 ];
 
                   let currentIndex = 0;
@@ -274,7 +281,7 @@
               <div class="widget-post">
                 <a href="Asiafo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image16.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asiafo Amanfro M/A School</span>
@@ -287,7 +294,7 @@
               <div class="widget-post">
                 <a href="Asutsuare.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image70.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asutsuare Estate D/A School</span>
@@ -300,7 +307,7 @@
               <div class="widget-post">
                 <a href="Bunso.html">
                   <div class="widget-img">
-                    <img src="../images/20.jpg" alt="" />
+                    <img src="../images/image44.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Bunso M/A School</span>
@@ -312,7 +319,7 @@
               <div class="widget-post">
                 <a href="Ayensukrom.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image15.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Ayensukrom M/A School</span>
@@ -323,7 +330,7 @@
               <div class="widget-post">
                 <a href="Dzita.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image32.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Dzita Learning Comm. School</span>
@@ -335,7 +342,7 @@
               <div class="widget-post">
                 <a href="Kwamo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image46.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Kwamo M/A School</span>
