--- a/Projects/Pokrom.html
+++ b/Projects/Pokrom.html
@@ -187,7 +187,7 @@
                   making access to quality learning materials and career guidance difficult. 
                   Recognizing these issues, Le Shelter Foundation initiated a humanitarian project aimed at enhancing educational conditions, 
                   empowering students, and strengthening community engagement. Our efforts were supported by dedicated stakeholders, 
-                  including school administrators, local leaders, and volunteers committed to improving learning outcomes.
+                  including school administrators, local leaders, sponsors, and volunteers committed to improving learning outcomes.
                 </p>
                 <p style="text-align: justify">
                   Le Shelter Foundation’s visit to Pokrom M/A JHS brought meaningful support through motivational talks, 
