--- a/Projects.html
+++ b/Projects.html
@@ -115,7 +115,7 @@
     <div id="donateModal1" class="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <img
+        <img alt=""
           src="images/Logo.png"
           style="height: 80px; width: 250px"
         />
@@ -416,7 +416,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="noopener noreferrer" >
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
