--- a/Projects/Bunso.html
+++ b/Projects/Bunso.html
@@ -262,7 +262,7 @@
 
                   <script>
                     const currentURL = encodeURIComponent(window.location.href);
-                    const text = encodeURIComponent("Check out this amazing article!");
+                    const text = encodeURIComponent("Check out this Le Shelter Foundation Project!");
                 
                     document.getElementById("fb-share").href = `https://www.facebook.com/sharer/sharer.php?u=${currentURL}`;
                     document.getElementById("twitter-share").href = `https://twitter.com/intent/tweet?url=${currentURL}&text=${text}`;
