--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
               <div class="cause-wrap d-flex flex-wrap justify-content-between">
                <figure class="m-0">
-                  <img src="images/Flyer.jpg" alt="Flyer" class="flyer" onclick="openFlyerModal()" />
+                  <img src="images/Current.jpg" alt="Flyer" class="flyer" onclick="openFlyerModal()" />
               </figure>
               
               <div id="flyerModal" class="modal">
